# Documentation_generator

./: README.md  analyzer.py  code_ingestion.py  dir-layout.py  file-metadata.py  file_metadata.json  file_structure.json  organized_files.pkl  parser.py  pyproject.toml
